--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -601,9 +601,9 @@ top:14px;}
 
 /* Footer User Register Style*/
 
-#register_footer_promo {margin: auto; width: 750px; margin-top: 13px; }
+#register_footer_promo {margin: auto; width: 770px; margin-top: 13px; }
 #register_footer_promo .text {padding-right: 20px; border-right: 1px dotted #888; float: left}
-#register_footer_promo .text h1 {font-weight: normal; color: #fff; font-size: 17px; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic;}
+#register_footer_promo .text h1 {text-shadow: 2px 2px 2px #000000; font-weight: normal; color: #fff; font-size: 17px; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic;}
 #register_footer_promo .text h1 span {color: #B63030; font-family: "jubilat-1","jubilat-2",Georgia;}
 #register_footer_promo .text h2{font-size: 12px; margin-top: 3px; font-weight: normal; color: #aaa;}  
 #register_footer_promo .register {float: left; padding-left: 20px; margin-top: 5px;}
@@ -618,7 +618,7 @@ top:14px;}
 .my_favorites li {display:inline; margin-left: 3px; }
 .my_favorites  li a img {border:1px solid #777777; width: 40px; height: 51px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
- .my_favorites_containter .close:hover {background-position: -25px -25px;} 
+.my_favorites_containter .close:hover {background-position: -25px -25px;} 
 .my_favorites_link {padding-left:18px !important; background: url("../images/icon_star.png") no-repeat scroll left center transparent;}
   
  #zero_favorites {color: #fff; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic; text-align: center; font-size: 15px; margin-top: 20px;}
@@ -633,14 +633,17 @@ top:14px;}
 
 .footer_tabs_links {  position: fixed; right: 10px; bottom: 59px;z-index: 1000}
 .footer_tabs_links.collapsed{bottom: 0px !important;}
-.footer_tabs_links li {padding-top: 1px; display: inline-block; margin-right: 10px; background-color: #222;; text-align: center; height:22px;border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
-.footer_tabs_links li.ui-tabs-selected, .footer_tabs_links li:hover {background-color: #000;} 
+.footer_tabs_links li {padding-top: 1px; display: inline-block; margin-right: 10px; background: url("../images/tab_inactive_up.jpg") repeat-x scroll left top transparent;  text-align: center; height:22px;border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
+.footer_tabs_links li:hover {background: url("../images/tab_inactive_over.jpg") repeat-x scroll left top transparent; }
+.footer_tabs_links li.ui-tabs-selected{background: url("../images/tab_active.jpg") repeat-x scroll left top transparent; } 
 
-.footer_tabs_links li  a {cursor: pointer;  font-size: 13px; color: #aaa; margin:0 16px; }
+.footer_tabs_links li  a {cursor: pointer;  font-size: 12px; color: #fff; font-weight: 500; margin:0 16px; }
 .footer_tabs_links li.ui-tabs-selected a, .footer_tabs_links li:hover a{color: #fff}
  
-.footer_tabs_closes {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;text-indent:-9999px;;width:25px;}
- 
+ .footer_tabs_closes {background: url("../images/tab_active.jpg") repeat-x scroll left top transparent;}
+.footer_tabs_closes div{cursor: pointer; background:url("../images/arrow_down.png") no-repeat scroll 7px 7px transparent;height:25px;right:5px;text-indent:-9999px;;width:25px;}
+
+
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
 #footer .container{margin-top: 10px;}
