--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -640,10 +640,11 @@ top:14px;}
 .footer_tabs_links li  a {cursor: pointer;  font-size: 12px; color: #fff; font-weight: 500; margin:0 16px; }
 .footer_tabs_links li.ui-tabs-selected a, .footer_tabs_links li:hover a{color: #fff}
  
- .footer_tabs_closes {background: url("../images/tab_active.jpg") repeat-x scroll left top transparent;}
+ .footer_tabs_closes {background: url("../images/tab_active.jpg") repeat-x scroll left top transparent !important;}
 .footer_tabs_closes div{cursor: pointer; background:url("../images/arrow_down.png") no-repeat scroll 7px 7px transparent;height:25px;right:5px;text-indent:-9999px;;width:25px;}
-
-
+.footer_tabs_links.collapsed  .footer_tabs_closes{background: none repeat-x scroll left top transparent !important;}
+.footer_tabs_links.collapsed  .footer_tabs_closes div {background:none no-repeat scroll 7px 7px transparent;}
+	
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
 #footer .container{margin-top: 10px;}
