--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -143,6 +143,9 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 h1.itemName{font-weight: 100; font-size: 20px; margin: 0 0 5px 0;}
 h2.designer{margin: 0 0 8px 0; font-size: 12px;}
 p.description{margin: 0 0 16px 0; color: #777; font-size: 13px}
+ .productInfo .highlights{height: 45px; background: url(../images/bg_highlights.jpg) center center no-repeat; text-align: center; color: #333; text-transform:uppercase;  font-weight: 700;letter-spacing: 1px; margin: 0 0 5px 0;}
+ .productInfo .highlights span{font-size: 11px; line-height: 45px;}
+
 
 .socialButtons{float: right;}
 .socialButtons a:hover{position: relative; top: 2px;}
