--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -147,10 +147,13 @@ h2.designer{margin: 0 0 8px 0; font-size: 12px;}
 p.description{margin: 0 0 16px 0; color: #666; font-size: 13px}
 .productInfo .highlights{height: 45px; background: url(../images/bg_highlights.jpg) center center no-repeat; text-align: center; color: #333; text-transform:uppercase;  font-weight: 700;letter-spacing: 1px; margin: 0 0 5px 0;}
 .productInfo .highlights span{font-size: 11px; line-height: 45px;}
-.productInfo .stylist {display: none;margin: 10px 0; text-align: right; }
-.productInfo .stylist .label{font-family: "jubilat-1","jubilat-2",Georgia; font-size: 9px; font-style: italic; color: #888}
-.productInfo .stylist .title {font-size: 11px; color: #666;}
-.productInfo .stylist .name {}
+.productInfo .stylist {line-height: 20px;margin-top: 10px;overflow: hidden;padding: 0 25px;}
+.productInfo .stylist .avatar{float:left}
+.productInfo .stylist .avatar img {width: 50px;}
+.productInfo .stylist .text{ float: left; margin-left: 20px; text-align: center;}
+.productInfo .stylist .label{font-size: 13px;color: #B83838}
+.productInfo .stylist .title { color: #999;}
+.productInfo .stylist .name {color: #666;font-size: 12px;}
 .socialButtons{float: right;}
 .socialButtons a:hover{position: relative; top: 2px;}
 
