--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -128,6 +128,8 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 #photoBox .prev { background:url("../images/img_nav_prev.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 #photoBox .zoom{background: url(../images/img_nav_zoom.jpg) top left no-repeat; height: 27px; width:262px;}
 .gzoombutton, .gzoomSlider {display: none;}
+#photoBox .commerce-product-field {overflow: hidden;}
+
 
 .zoomedSlider {width: 840px;}
 .zoomedSlider .slides_container {float: left; margin: 0 9px 0 0; width: 652px;}
@@ -147,13 +149,12 @@ h2.designer{margin: 0 0 8px 0; font-size: 12px;}
 p.description{margin: 0 0 16px 0; color: #666; font-size: 13px}
 .productInfo .highlights{height: 45px; background: url(../images/bg_highlights.jpg) center center no-repeat; text-align: center; color: #333; text-transform:uppercase;  font-weight: 700;letter-spacing: 1px; margin: 0 0 5px 0;}
 .productInfo .highlights span{font-size: 11px; line-height: 45px;}
-.productInfo .stylist {line-height: 20px;margin-top: 20px;overflow: hidden;padding: 0 25px;}
-.productInfo .stylist .avatar{float:left}
-.productInfo .stylist .avatar img {width: 50px;}
-.productInfo .stylist .text{ margin-left: 20px; text-align: center;}
-.productInfo .stylist .label{font-size: 13px;color: #B83838}
-.productInfo .stylist .title { color: #999;}
-.productInfo .stylist .name {color: #666;font-size: 12px;}
+.stylist{ float: left; width: 324px; padding: 20px 0;}
+.stylist img{float: left; margin: 0 0 0 38px;}
+.stylist h1{ text-align:center; color: #ae1b1b;font-size: 16px; font-family:"jubilat-1","jubilat-2", Georgia; font-style:italic; font-weight: 100;margin: 8px 0 ; width: 300px;}
+.stylist h2{text-align:center; color: #434343; font-weight: 500; font-size: 13px;width: 300px;}
+.stylist h2 span{color: #888;font-weight; 100;}
+
 .socialButtons{float: right;}
 .socialButtons a:hover{position: relative; top: 2px;}
 
