--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -625,8 +625,8 @@ top:14px;}
 #register_footer_promo .login a{float: none; color: #fff; font-style: normal; text-decoration: underline;}
 
 /* Footer User Credits */
-#footer_credits_promo {margin: auto; width: 610px; margin-top: 13px;line-height: 20px;  }
-#footer_credits_promo .credits {  padding-top: 5px;  float: left}
+#footer_credits_promo {margin: auto; width: 800px; margin-top: 13px;line-height: 20px;  }
+#footer_credits_promo .credits {  padding-top: 5px;  float: left; padding-left: 20px;  border-left: 1px dotted #888;}
 #footer_credits_promo .credits h1 {text-shadow: 2px 2px 2px #000000;  font-size:11px; font-weight: normal; color: #fff;   font-style:italic;}
 #footer_credits_promo .credits h1 span { color: #B63030;font-size: 20px; padding-left: 5px; }
 
@@ -640,10 +640,14 @@ top:14px;}
 
 #footer_credits_promo  .limited_offer {display: none; font-family: "jubilat-1","jubilat-2",Georgia; color: #ddd; border-left: 1px dotted #888; margin-left: 20px; float: left; padding-left: 20px; margin-top: 5px;}
 #footer_credits_promo  .limited_offer .promo_text{}
-#footer_credits_promo  .limited_offer .limited_time{font-size: 10px;}
+#footer_credits_promo  .limited_offer .limited_time{font-size: 10px;} 
 #footer_credits_promo .limited_offer .text{float: left; padding-left: 20px; margin-top: 5px;}
 #footer_credits_promo .limited_offer a{float: none; color: #fff; font-style: normal; text-decoration: underline;}
 
+#footer_credits_promo .quick_links {float: left;margin-right: 20px; color: #fff;}
+#footer_credits_promo .quick_links .col {float: left; margin-left: 25px; font-size: 11px; }
+#footer_credits_promo .quick_links a{color: #fff;  font-size: 11px; font-weight: bold }
+#footer_credits_promo .quick_links a:hover{text-decoration: underline;}
 
   /* My Favorites */
 .my_favorites {text-align: center; padding: 5px;}
