--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -644,6 +644,7 @@ top:14px;}
 #footer_credits_promo .limited_offer .text{float: left; padding-left: 20px; margin-top: 5px;}
 #footer_credits_promo .limited_offer a{float: none; color: #fff; font-style: normal; text-decoration: underline;}
 
+#footer_credits_promo .quick_links img{height: 40px; }
 #footer_credits_promo .quick_links {float: left;margin-right: 20px; color: #fff;}
 #footer_credits_promo .quick_links .col {float: left; margin-left: 25px; font-size: 11px; }
 #footer_credits_promo .quick_links a{color: #fff;  font-size: 11px; font-weight: bold }
