--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -634,8 +634,8 @@ top:14px;}
 #footer_credits_promo .invite_friends{font-size: 12px;  border-left: 1px dotted #888; float: left; margin-left: 20px; font-style: italic;color: #ddd;  }
 #footer_credits_promo .invite_friends a{float: none; color: #fff; font-style: normal; text-decoration: underline;}
 #footer_credits_promo .signup_count span {color: #B63030;padding-left: 2px; font-size: 12px; font-weight: bold; font-style: normal}
-#footer_credits_promo .signup_count{float: left;  color: #fff; margin-left: 35px;}
-#footer_credits_promo .signup_count label {font-style: normal; display: inline;  font-size: 11px; }
+#footer_credits_promo .signup_count{float: left;  margin-left: 35px;}
+#footer_credits_promo .signup_count label {font-style: normal; font-style: italic;color: #ddd; font-weight: normal; display: inline;  font-size: 12px; }
 
 
 #footer_credits_promo  .limited_offer {display: none; font-family: "jubilat-1","jubilat-2",Georgia; color: #ddd; border-left: 1px dotted #888; margin-left: 20px; float: left; padding-left: 20px; margin-top: 5px;}
