--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -71,13 +71,16 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 .col1 ul{margin: 0 ; } 
 .col1 li{padding: 3px 0;}
 
-.col1 .itemLoved{float: left; display: block; clear: both; width: 190px; margin-bottom: 10px;}
-.col1 .itemLoved h1.itemName {font-size: 13px;  color: #000; line-height: 17px; padding: 0; margin: 0; border: 0;  font-style:normal;}
-.col1 .itemLoved h2.designer{margin: 0;}
-.col1 .itemLoved h2.designer a{font-size: 12px;color: #0f6da3; font-style:normal;font-family:"museo-sans-1","museo-sans-2", Helvetica; margin: 3px 0 0 0;}
-.col1 .itemLoved h3 {font-size: 12px; font-style:italic; background: url(../images/icon_star.png) left center no-repeat; padding: 0 0 0 18px; margin: 3px 0 0 0;}
-.col1 .itemLoved .thumb{float: left; margin: 0 10px 10px 0; width: 56px; height: 71px;}
-.col1 .itemLoved .text{float: left;  width: 110px;}
+
+/* Most Loved theme*/
+.mostLoved h1{color: #b63030; font-size: 18px; font-weight: 100; margin: 0 0 12px 0;}
+.mostLoved .itemLoved{float: left; display: block; clear: both; width: 190px; margin-bottom: 10px;}
+.mostLoved .itemLoved h1.itemName {font-size: 13px;  color: #000; line-height: 17px; padding: 0; margin: 0; border: 0;  font-style:normal;}
+.mostLoved .itemLoved h2.designer{margin: 0;}
+.mostLoved .itemLoved h2.designer a{font-size: 12px;color: #0f6da3; font-style:normal;font-family:"museo-sans-1","museo-sans-2", Helvetica; margin: 3px 0 0 0;}
+.mostLoved .itemLoved h3 {font-size: 12px; font-style:italic; background: url(../images/icon_star.png) left center no-repeat; padding: 0 0 0 18px; margin: 3px 0 0 0;}
+.mostLoved .itemLoved .thumb{float: left; margin: 0 10px 10px 0; width: 56px; height: 71px;}
+.mostLoved .itemLoved .text{float: left;  width: 110px;}
 
 
 
@@ -616,8 +619,10 @@ top:14px;}
 /* User Edit Form */
 #avatar {width: 150px;float: left}
 #upload {float: left; width: 400px;}
-
-#profile_information.checkoutPanel {margin-top: 25px; margin-bottom: 25px;}
+.page-user-edit .column1{width: 682px; float: left; border-right: 1px solid #ddd; padding-right: 25px; padding-bottom: 30px;}
+.page-user-edit  .column2{position: absolute;padding-left: 25px;  width:267px; display:inline;float:left; }
+#fm_user_edit_form {margin-top: 25px;}
+#profile_information.checkoutPanel { margin-bottom: 25px;}
 
 
 
