--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -698,6 +698,8 @@ top:14px;}
  #zero_favorites {color: #fff; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic; text-align: center; font-size: 15px; margin-top: 20px;}
  #zero_favorites img{}
  
+ .save_for_later {color: #fff;  font-weight: bold; font-size: 10px;}
+ 
  /* Floating footer tabs */
 .footer_tabs_container {position: fixed; bottom: 0px; left: 0px; width: 100%; z-index: 1001}
 .footer_tabs_content {  min-height: 13px; height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
