--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -103,7 +103,7 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 .buttonShop{ color: #fff; background: url(../images/b_shop.png) top left no-repeat; width: 156px; height: 36px; text-decoration: none; text-align:center; text-indent: -9999px; display: block; margin: 0 auto}
 .buttonShop:hover{background-position: bottom left;}
 
-.shopAjaxLoader {background-color:rgba(255, 255, 255, 0.8);background-image: url(../images/confirm-ajax-loader.gif) ;background-position:5px 50%;background-repeat:no-repeat;left: 372px; top:2px;;;color:#666;font-size:14px;padding:5px 5px 5px 25px;position:absolute;text-align:center;}
+.shopAjaxLoader { background-color: rgba(255, 255, 255, 0.8);color: #666666;font-size: 14px;left: 372px;padding: 13px;position: absolute;text-align: center;top: 100px;z-index: 99;}
 #loading_more {margin-top: 10px; padding-top: 10px;  text-align: center; width: 100%;}
 #loading_more a{color: #777;}
 #loading_more img{margin-top: 10px;}
