--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -67,7 +67,7 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 .col1 a:hover{color: #b63030}
 .col1 a.active{background: url(../images/arrow_red.png) center right no-repeat;color: #b63030}
 .col1 h1{color: #b63030; font-size: 18px; font-weight: 100; margin: 20px 0 12px 0; border-top: 1px solid #ddd; padding: 20px 0 0 0;}
-.col1 a.viewAll{font-family:"museo-sans-1","museo-sans-2", Helvetica; outline:none; margin-bottom: 10px; font-size: 12px;color: #b63030; font-style:normal;}
+.col1 a.viewAll{font-family:"museo-sans-1","museo-sans-2", Helvetica; margin-bottom: 10px; outline:none; font-size: 12px;color: #b63030; font-style:normal;}
 .col1 ul{margin: 0 ; } 
 .col1 li{padding: 3px 0;}
 
@@ -82,7 +82,9 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 .mostLoved .itemLoved .thumb{float: left; margin: 0 10px 10px 0; width: 56px; height: 71px;}
 .mostLoved .itemLoved .text{float: left;  width: 110px;}
 
-
+.most_loved_number {font-size: 12px; font-weight: bold; font-style:italic; background: url(../images/icon_star.png) left center no-repeat; padding: 0 0 0 18px; margin: 3px 0 0 0;}
+.productInfo .most_loved_number {padding-right: 10px; margin-right: 10px; border-right: 1px solid #ddd;}
+#most_loved {background: url(../images/icon_star.png) left center no-repeat; padding: 0 0 0 18px; font-size: 12px; font-weight: normal}
 
 /********* designer panel **********/
 
