--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -748,7 +748,7 @@ top:14px;}
 #about .text h1{font-style: italic;  font-family:"jubilat-1","jubilat-2", Georgia; font-size: 20px; line-height: 25px; font-weight: 200; margin: 0 0 30px 0;}
 #about .text h1 span{font-weight: bold;}
 table.timeline td{ padding-right: 30px; vertical-align:top;}
-#about .text h3{color: #a22a2a;}
+#about .text h3{color: #a22a2a; font-size: 12px}
 #about .text p{margin-bottom: 10px;}
 #about ul li{list-style-type: disc; margin-left: 20px;}
 #about table{width: 550px; height: 344px; font-size: 12px}
