--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -73,7 +73,7 @@ span {
 .col1 a:hover{color: #b63030}
 .col1 a.active{background: url(../images/arrow_red.png) center right no-repeat;color: #b63030}
 .col1 h1{color: #b63030; font-size: 18px; font-weight: 100; margin: 20px 0 12px 0; border-top: 1px solid #ddd; padding: 20px 0 0 0;}
-.col1 a.viewAll{font-family:"museo-sans-1","museo-sans-2", Helvetica; margin-bottom: 10px; outline:none; font-size: 12px;color: #b63030; font-style:normal;}
+.col1 a.viewAll{font-family:"museo-sans-1","museo-sans-2", Helvetica; outline:none; font-size: 12px;color: #b63030; font-style:normal;}
 .col1 ul{margin: 0 ; } 
 .col1 li{padding: 3px 0;}
 
