--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -302,8 +302,8 @@ a.facebookConnect{background: url(../images/b_facebook.png) top left no-repeat; 
 
 .generatingCode{margin: 160px 0 0 0; text-align:center;}
 
-a.btnFacebook{width: 32px; height: 31px; background: url(../images/b_facebook_social.png) top left no-repeat; text-indent:-9999px; display: block;}
-a.btnTwitter{width: 32px; height: 31px; background: url(../images/b_twitter_social.png) top left no-repeat; text-indent:-9999px;display: block;}
+a.btnFacebook{width: 32px;float: left; margin-left: 5px;  height: 31px; background: url(../images/b_facebook_social.png) top left no-repeat; text-indent:-9999px; display: block;}
+a.btnTwitter{width: 32px; height: 31px; float: left; margin-left: 5px; background: url(../images/b_twitter_social.png) top left no-repeat; text-indent:-9999px;display: block;}
 a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 
 #inviteCode{border-collapse: separate !important; background: #74645a; padding: 5px; color: #fff; font-size: 13px; border-top-left-radius:5px; -webkit-border-top-left-radius: 5px; -moz-border-top-left-top-radius: 5px;  border-top-right-radius:5px; -webkit-border-top-right-radius: 5px; -moz-border-top-right-top-radius: 5px; margin: 20px auto 0 auto; width: 490px;}
@@ -339,12 +339,13 @@ a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 
 #fm-invite-send-email-form  .form-text{width: 210px; margin: 4px;float: left;}
 #invite_block h2{color: #888; margin-bottom: 5px; }
-#invite_block h3 {font-style: italic; font-size: 12px; font-weight: normal; color: #888;}
-#invite_block #explanation {background-color: #fff; text-align: left;  padding: 15px; border: 1px solid #444; overflow: hidden;}
+#invite_block h3 {font-style: italic; font-size: 12px; font-weight: normal; color: #;}
+#invite_block #explanation {background-color: #fff;font-size: 12px;  text-align: left;  padding: 15px; border: 1px solid #444; overflow: hidden;}
 #invite_block #explanation #col1, #invite_block #explanation #col2 {float: left}
 #invite_block #explanation #col1 {width: 50%; margin-right: 10px; padding-right: 10px; border-right: 1px dotted #aaa}
-#invite_block #email, #invite_block #share_link {margin-top: 15px; }
-
+#invite_block #email {margin-top: 20px; }
+#invite_block #share_link {margin-top: 40px}
+#invite_block .form-text.urlCode{float: left}
 
 #block-views-nodequeue-1-block h2 {
 font-size:16px;
