--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -170,6 +170,7 @@ p.description{margin: 0 0 16px 0; color: #666; font-size: 13px}
 
 .socialButtons{float: right;}
 .socialButtons a:hover{position: relative; top: 2px;}
+.socialButtons a{margin-left: 3px;}
 
 .buyit-button { color: #fff; background: url(../images/b_buyit.png) top left no-repeat; width: 110px; height: 39px; text-decoration: none; text-align:center; text-indent: -9999px; display: block; margin: 0; position: relative; left: 100px;}
 .buyit-button:hover{background-position: bottom left;}
