--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -356,6 +356,14 @@ margin-bottom:8px;
 /* Global Static Pages */
 .page-static .col2 .pad {padding: 0px !important;  margin-top: 30px;}
 .page-static .pad h2 {display:none;}
+.static_panel {background-color: #fff; min-height: 500px; padding: 30px; }
+
+#faq ul, #faq li {}
+#faq li {}
+#faq li a{font-size: 28px; }
+#faq ul {margin-bottom: 50px;}
+#faq p {margin: 15px 0}
+#faq h3 {margin-top: 15px;}
 
 /* Global ACCORDIAN STYLING*/
 .ui-accordion { width: 100%; }
